SERVER-29 | New method in BusLines and BusStop
