# src/main/resources/public/swagger.yaml
@@ -248,16 +248,16 @@ paths:
                   "myGeoPoint.longitude: Longitude is null"
                 ]
               }
-  /bus-stops/{name}:
+  /bus-stops/{id}:
     get:
       tags:
         - bus-stops
-      summary: Get busStop by name
-      operationId: getBusStopByName
+      summary: Get busStop by id
+      operationId: getBusStopById
       parameters:
-        - name: name
+        - name: id
           in: path
-          description: BusStop name
+          description: BusStop id
           required: true
           schema:
             type: string
@@ -278,12 +278,12 @@ paths:
     delete:
       tags:
         - bus-stops
-      summary: Delete busStop by name
-      operationId: deleteBusStopByName
+      summary: Delete busStop by id
+      operationId: deleteBusStopById
       parameters:
-        - name: name
+        - name: id
           in: path
-          description: BusStop name
+          description: BusStop id
           required: true
           schema:
             type: string
@@ -353,16 +353,16 @@ paths:
                   "name: This field is required"
                 ]
               }
-  /bus-lines/{name}:
+  /bus-lines/{id}:
     get:
       tags:
         - bus-lines
-      summary: Get BusLine by name
-      operationId: getBusLineByName
+      summary: Get BusLine by id
+      operationId: getBusLineById
       parameters:
-        - name: name
+        - name: id
           in: path
-          description: BusLine name
+          description: BusLine id
           required: true
           schema:
             type: string
@@ -383,12 +383,12 @@ paths:
     delete:
       tags:
         - bus-lines
-      summary: Delete BusLine by name
-      operationId: deleteBusLineByName
+      summary: Delete BusLine by id
+      operationId: deleteBusLineById
       parameters:
-        - name: name
+        - name: id
           in: path
-          description: BusLine name
+          description: BusLine id
           required: true
           schema:
             type: string
